Bug 1923080 - Increase window min-width when vertical tabs is enabled r=sidebar-reviewers,desktop-theme-reviewers,dao,kcochrane
This is to prevent the overlapping of toolbar items that aren't in overflow.
This fix works on Mac but will need to be checked on Linux and Windows as their
controls are a different size.

Differential Revision: https://phabricator.services.mozilla.com/D225802

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -50,6 +50,11 @@ body {
   &:not([chromehidden~="toolbar"]) {
     min-width: 450px;
     min-height: 120px;
+
+    /* stylelint-disable-next-line media-query-no-invalid */
+    @media (-moz-bool-pref: "sidebar.verticalTabs") {
+      min-width: 670px;
+    }
   }
 
   /* z-indices that fight on the browser stack */
